{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 51,
  "lineage": "2cd0c7bd-b280-b0eb-851f-b0d4480e2227",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "vpc-drt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:route-table/rtb-062d5fb595a8aa7d9",
            "default_route_table_id": "rtb-062d5fb595a8aa7d9",
            "id": "rtb-062d5fb595a8aa7d9",
            "owner_id": "718881314992",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fd1659574fab497",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PUBLIC-RT"
            },
            "tags_all": {
              "Name": "PUBLIC-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-092db1372a1264848"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:security-group/sg-0c0d1ed6a7083981d",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0d1ed6a7083981d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "718881314992",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC-SG"
            },
            "tags_all": {
              "Name": "VPC-SG"
            },
            "vpc_id": "vpc-092db1372a1264848"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bd0d5d09eeb734a",
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:elastic-ip/eipalloc-03bd0d5d09eeb734a",
            "association_id": "eipassoc-0951ea2c45d61de9f",
            "domain": "vpc",
            "id": "eipalloc-03bd0d5d09eeb734a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-05f408fea8e3f9fda",
            "private_dns": "ip-10-0-1-53.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-3-0-228-148.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.228.148",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:instance/i-0f09e28ef208af975",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f09e28ef208af975",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vani1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01173232303dc1991"
              }
            ],
            "primary_network_interface_id": "eni-01173232303dc1991",
            "private_dns": "ip-10-0-1-105.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.105",
            "public_ip": "13.229.208.172",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a8b548387addd834",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4186c9202a40df3",
            "tags": {
              "Name": "PUBLIC-SERVER"
            },
            "tags_all": {
              "Name": "PUBLIC-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0d1ed6a7083981d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718881314992",
            "id": "i-0f09e28ef208af975",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_machine2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:instance/i-07ae32143e292754d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ae32143e292754d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vani1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b6cad8ab3ad3cd4f"
              }
            ],
            "primary_network_interface_id": "eni-0b6cad8ab3ad3cd4f",
            "private_dns": "ip-10-0-2-122.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.122",
            "public_ip": "54.169.165.139",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-044e63e18c67fdef2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f44390f3fc8550e3",
            "tags": {
              "Name": "PRIVATE-SERVER"
            },
            "tags_all": {
              "Name": "PRIVATE-SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0d1ed6a7083981d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718881314992",
            "id": "i-07ae32143e292754d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_subnet.private-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:internet-gateway/igw-09fd1659574fab497",
            "id": "igw-09fd1659574fab497",
            "owner_id": "718881314992",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "VPC-IGW"
            },
            "tags_all": {
              "Name": "VPC-IGW"
            },
            "vpc_id": "vpc-092db1372a1264848"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bd0d5d09eeb734a",
            "association_id": "eipassoc-0951ea2c45d61de9f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0dd9a8c006211548e",
            "network_interface_id": "eni-05f408fea8e3f9fda",
            "private_ip": "10.0.1.53",
            "public_ip": "3.0.228.148",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e4186c9202a40df3",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            },
            "vpc_id": "vpc-092db1372a1264848"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:route-table/rtb-0dad00f3532f0a423",
            "id": "rtb-0dad00f3532f0a423",
            "owner_id": "718881314992",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fd1659574fab497",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRIVATE_RT"
            },
            "tags_all": {
              "Name": "PRIVATE_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-092db1372a1264848"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718881314992",
            "id": "rtb-0dad00f3532f0a423",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e285d707cc7e51d9",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0dad00f3532f0a423",
            "subnet_id": "subnet-0f44390f3fc8550e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:subnet/subnet-0f44390f3fc8550e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f44390f3fc8550e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718881314992",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "PRIVATE-SUBNET"
            },
            "tags_all": {
              "Name": "PRIVATE-SUBNET"
            },
            "vpc_id": "vpc-092db1372a1264848"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718881314992",
            "id": "subnet-0f44390f3fc8550e3",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:subnet/subnet-0e4186c9202a40df3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4186c9202a40df3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718881314992",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "PUBLIC-SUBNET"
            },
            "tags_all": {
              "Name": "PUBLIC-SUBNET"
            },
            "vpc_id": "vpc-092db1372a1264848"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718881314992",
            "id": "subnet-0e4186c9202a40df3",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:718881314992:vpc/vpc-092db1372a1264848",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08776db5d6a8da8ce",
            "default_route_table_id": "rtb-062d5fb595a8aa7d9",
            "default_security_group_id": "sg-0c0d1ed6a7083981d",
            "dhcp_options_id": "dopt-01f606eabb9b1aa86",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092db1372a1264848",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062d5fb595a8aa7d9",
            "owner_id": "718881314992",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718881314992",
            "id": "vpc-092db1372a1264848",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}